chore: dies das

--- a/Website/EhsInput/src/styles/app.css
+++ b/Website/EhsInput/src/styles/app.css
@@ -1,6 +1,7 @@
 .logoSize {
   width: 200px;
-  height: 200px;
+  height: 105px;
+  z-index: 100;
 }
 
 .marginTopAll {
@@ -41,15 +42,14 @@
 
 .sidenav {
   height: 100%; /* 100% Full-height */
-  width: 0; /* 0 width - change this with JavaScript */
+  width: 250px; /* 0 width - change this with JavaScript */
   position: fixed; /* Stay in place */
   z-index: 1; /* Stay on top */
   top: 0; /* Stay at the top */
   left: 0;
   background-color: #048ccc; /* Black*/
   overflow-x: hidden; /* Disable horizontal scroll */
-  padding-top: 60px; /* Place content 60px from the top */
-  transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+  padding-top: 120px; /* Place content 60px from the top */
 }
 
 /* The navigation menu links */
@@ -59,12 +59,12 @@
   font-size: 25px;
   color: #cdedfa;
   display: block;
-  transition: 0.3s;
 }
 
 /* When you mouse over the navigation links, change their color */
 .sidenav a:hover {
   color: #ffffff;
+  font-size: 27px;
 }
 
 /* Position and style the close button (top right corner) */
@@ -86,4 +86,12 @@
 @media screen and (max-height: 450px) {
   .sidenav {padding-top: 15px;}
   .sidenav a {font-size: 18px;}
+}
+
+#mainpage {
+  margin-left: 250px;
+}
+
+.width10 {
+  width: 10%;
 }
