--- a/Website/EhsInput/src/styles/app.css
+++ b/Website/EhsInput/src/styles/app.css
@@ -21,14 +21,14 @@
   width: 33%;
 }
 
-.sticky-header {
+/* .sticky-header {
   position: -webkit-sticky;
   position: sticky;
   top: 0; 
   background-color: white; 
   z-index: 1000; 
   padding: 2px 0; 
-}
+} */
 
 .scroll {
   max-height: 55vh; 
@@ -53,7 +53,7 @@
 }
 
 /* The navigation menu links */
-.sidenav a {
+.sidenavA {
   padding: 8px 8px 8px 32px;
   text-decoration: none;
   font-size: 25px;
@@ -61,8 +61,21 @@
   display: block;
 }
 
+.sidenavASub {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 21px;
+  color: #cdedfa;
+  display: block;
+}
+
+.sidenavASub:hover {
+  font-size: 23px;
+  color: #ffffff;
+}
+
 /* When you mouse over the navigation links, change their color */
-.sidenav a:hover {
+.sidenavA:hover {
   color: #ffffff;
   font-size: 27px;
 }
@@ -95,3 +108,15 @@
 .width10 {
   width: 10%;
 }
+
+.sidenavASub.active {
+  font-weight: bold;
+  font-size: 23px;
+  color: #ffffff;
+}
+
+.rotatingimg {
+  height: 18px;
+  width: 18px;
+}
+
